alignmnet fix

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -285,7 +285,6 @@ body {
     color: black !important;
 }
 .resume-description {
-    font-size: 2.5rem; /* Smaller font size for mobile */
     color: #3E3E3E
 }
 
